feat: comprehensive demos to rspack

--- a/comprehensive-demo-react16/app-05/src/index.html
+++ b/comprehensive-demo-react16/app-05/src/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <action-button foo="bar"></action-button>
-  <alert-box id="info" content="Hello"></text-box>
+<action-button foo="bar"></action-button>
+<alert-box id="info" content="Hello"></alert-box>
 </body>
 
 </html>
