--- a/comprehensive-demo-react18/app-05/src/index.html
+++ b/comprehensive-demo-react18/app-05/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <action-button foo="bar"></action-button>
-  <alert-box id="info" content="Hello"></text-box>
+  <alert-box id="info" content="Hello"/>
 </body>
 
 </html>
