--- a/native-federation-tests-typescript-plugins/host/index.html
+++ b/native-federation-tests-typescript-plugins/host/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/src/index.ts"></script>
 </body>
 
 </html>
